edited modal functionality

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1229,7 +1229,7 @@ button:disabled,
 
 /* Modal overlay with flex centering */
 .modal {
-	display: none; /* Hidden initially; set to flex when active */
+	display: none; /* Hidden initially; will be set to flex via JS when active */
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -1237,7 +1237,6 @@ button:disabled,
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.8); /* Dark, semi-transparent background */
 	z-index: 9999;
-	display: flex;
 	align-items: center;
 	justify-content: center;
 }
